Reset p style to avoid shifting parent elements

--- a/static/style.css
+++ b/static/style.css
@@ -69,6 +69,15 @@ body {
     display: none;
   }
 }
+
+/* Small reset style to avoid p messing with parent elems */
+p {
+  margin: 0;
+}
+p + p {
+  margin-top: 10px;
+}
+
 header {
   display: flex;
   padding-block: 1em;
